--- a/9.1+Flex+Direction/9.1 Flex Direction/index.html
+++ b/9.1+Flex+Direction/9.1 Flex Direction/index.html
@@ -13,13 +13,19 @@
     .container {
       color: white;
       border: 5px solid gold;
-      display: flex;
+      display: inline-flex;
     }
 
     /*
 Select all the elements that are the direct
 children of the .container class.
     */
+    .container{
+      flex-direction:column;
+    }
+    .container >*{
+      flex-basis: 100px;
+    }
 
     .red {background-color: #eb4d4b;}
     .orange {background-color: #f0932b;}
